# sniper-bot

./: .gitignore  Cargo.toml  README.md  dummy.txt  restore.sh
src/: bot.rs  constants.rs  main.rs  mod.rs  pool_sniper.rs  setting.json  token_sniper.rs  transaction_simulator.rs
src/abi/: mod.rs  proxy.json  pulsXSwapRouter.json
src/datasets/: new_pools.json
src/utils/: helpers.rs  mod.rs
src/utils/types/: events.rs
src/utils/types/structs/: mod.rs  pool.rs  setting.rs  token.rs
ui/: package.json
ui/src/: App.css  App.js
ui/src/constants/: settings.js
