[package]
name = "sniper-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0.14"
actix-web = "4.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
dotenv = "0.15.0"
fern = "0.7.0"
chrono = "0.4.38"
log = "0.4.22"
base64 = "0.22.1"
serde_json = "1.0.133"
reqwest = { version = "0.12.9", features = ["json"] }
ethers-core = "2.0.14"
ethers-providers = "2.0.14"
anyhow = "1.0.93"
cached = { version = "0.54.0", features = ["async"] }
hex = "0.4.3"
warp = "0.3.7"
actix-cors = "0.7.0"
actix-web-actors = "4.3.1"
actix = "0.13.5"
lazy_static = "1.5.0"
